# DiscoCat

./: .gitignore  ReadMe.md  pyproject.toml
app/: __main__.py
app/core/: config.py  logger.py  quiz_bot.db
app/db/: quiz_controller.py  quiz_db.py
app/handlers/: echo.py  quiz.py
app/keyboard/: __init__.py
